feat(enterprise): Add distributed session store infrastructure
Enterprise session store system for GridFractAL fork:
- ISessionStore interface with SessionMetadata record
- InMemorySessionStore (default, backward compatible)
- RedisSessionStore (Redis distributed sessions)
- DistributedSessionStore (IDistributedCache backend)
- SessionStoreExtensions (DI registration helpers)
- EnterpriseJsonContext (AOT-compatible serialization)

Core modifications:
- Unsealed StatefulSessionManager (public partial)
- Unsealed StreamableHttpSession with UserId property
- OAuth session upgrade flow (anonymous -> authenticated)
- Made UserIdClaim public for extensibility

All changes are AOT/trimming compatible with source-generated JSON.

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -18,6 +18,12 @@
     <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="$(System10Version)" />
   </ItemGroup>
 
+  <!-- Enterprise: Redis session store dependency -->
+  <ItemGroup>
+    <PackageVersion Include="StackExchange.Redis" Version="2.8.16" />
+    <PackageVersion Include="Microsoft.Extensions.Caching.Abstractions" Version="$(System10Version)" />
+  </ItemGroup>
+
   <!-- Product dependencies < .NET 10 -->
   <ItemGroup Condition="!$([MSBuild]::IsTargetFrameworkCompatible($(TargetFramework), 'net10.0'))">
     <PackageVersion Include="System.Net.ServerSentEvents" Version="$(System10Version)" />
