fix: Address code review feedback
Security:
- Session upgrade now explicit (anonymous->auth only, no hijack risk)
- Added security documentation in HasSameUserId remarks

AOT/Correctness:
- Fixed EnterpriseJsonContext: Added TypeInfoPropertyName for ListString
- Fixed RedisValue casts: Use ToString() instead of unsafe (string)!
- Fixed TimeProvider: Use instance _timeProvider.TimestampFrequency

Immutability:
- Made SessionMetadata.LastActivityTicks and IsActive init-only
- All stores now use 'with' expression for thread-safe updates
- InMemorySessionStore uses TryUpdate for atomic operations

Dependencies:
- Made StackExchange.Redis optional (PrivateAssets=compile)

--- a/src/ModelContextProtocol.AspNetCore/ModelContextProtocol.AspNetCore.csproj
+++ b/src/ModelContextProtocol.AspNetCore/ModelContextProtocol.AspNetCore.csproj
@@ -24,9 +24,11 @@
     <ProjectReference Include="..\ModelContextProtocol\ModelContextProtocol.csproj" />
   </ItemGroup>
 
-  <!-- Enterprise: Session store dependencies -->
+  <!-- Enterprise: Session store dependencies (optional - only needed for distributed session stores) -->
   <ItemGroup>
-    <PackageReference Include="StackExchange.Redis" />
+    <!-- Redis support is optional - only required if using RedisSessionStore -->
+    <PackageReference Include="StackExchange.Redis" PrivateAssets="compile" />
+    <!-- Caching abstractions needed for DistributedSessionStore -->
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" />
   </ItemGroup>
 
