fix: Address additional code review security and concurrency issues
Security (StreamableHttpSession):
- Added atomic session upgrade binding using Interlocked.Exchange
- First authenticated request atomically binds to anonymous session
- Concurrent upgrade attempts now correctly checked against bound user
- UserId property returns bound user after upgrade

Concurrency (InMemorySessionStore):
- Fixed race condition: replaced GetOrAdd+lock with AddOrUpdate
- Atomic get-or-create-and-add in single operation

Concurrency (RedisSessionStore):
- Added transaction result checking in SetAsync and RemoveAsync
- Throws InvalidOperationException if transaction fails
- Prevents silent data inconsistency

Concurrency (DistributedSessionStore):
- Added retry-with-verify pattern for user session list operations
- Documented eventual consistency limitations of IDistributedCache
- Recommends RedisSessionStore for high-concurrency scenarios

--- a/src/ModelContextProtocol.AspNetCore/ModelContextProtocol.AspNetCore.csproj
+++ b/src/ModelContextProtocol.AspNetCore/ModelContextProtocol.AspNetCore.csproj
@@ -27,7 +27,7 @@
   <!-- Enterprise: Session store dependencies (optional - only needed for distributed session stores) -->
   <ItemGroup>
     <!-- Redis support is optional - only required if using RedisSessionStore -->
-    <PackageReference Include="StackExchange.Redis" PrivateAssets="compile" />
+    <PackageReference Include="StackExchange.Redis" />
     <!-- Caching abstractions needed for DistributedSessionStore -->
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" />
   </ItemGroup>
